# cleanroom-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  about.yaml  contribution_formats.md  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Agent/: index.html
AnalyticalSample/: index.html
Biosample/: index.html
CollectingBiosamplesFromSite/: index.html
DataListCollection/: index.html
DataLists/: index.html
Database/: index.html
ExperimentalContainer/: index.html
FieldResearchSite/: index.html
ImmaterialEntity/: index.html
MaterialEntity/: index.html
MaterialSample/: index.html
NamedThing/: index.html
OmicsProcessing/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
PlannedProcess/: index.html
ReifiedRelationship/: index.html
Sample/: index.html
Site/: index.html
SoilBiosample/: index.html
Specimen/: index.html
Study/: index.html
TestClass1/: index.html
TestClass2/: index.html
about/: index.html
age_in_years/: index.html
alternative_id/: index.html
assets/: biosample_relations_test_data.json  biosample_relations_test_data.ttl  schemasheets_deepdiff.txt
biosample_id/: index.html
biosample_list/: index.html
biosample_set/: index.html
biosamples/: index.html
birth_date/: index.html
cbfs_list/: index.html
cleanroom-schema/: index.html
collected_from/: index.html
derived_from/: index.html
description/: index.html
entries/: index.html
examples/: README.md
external_id/: index.html
frs_list/: index.html
id/: index.html
(+62 files in other folders)
